created model, controller and router for like
