# routes/comment.route.js
@@ -1,9 +1,10 @@
 import { Router } from 'express';
 const router = Router();
-import {createComment} from '../controllers/comment.controller.js';
+import {createComment, deleteComment} from '../controllers/comment.controller.js';
 
 
 router.post('/create', createComment);
+router.delete('/:id/delete', deleteComment);
 
 
 
